--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
                         <a href="#">2021년 후원금 사용내역 보고</a>
                         <p class="date">2022.01.08</p>
                     </div>
+                    <div class="text">
+                        <a href="#">새해 휴무 안내</a>
+                        <p class="date">2022.12.28</p>
+                    </div>
                 </div>
                 <div class="text-box community">
                     <div class="text">
@@ -117,6 +121,10 @@
                     <div class="text">
                         <a href="#">용산에 괜찮은 동물병원이 추천해주세요</a>
                         <p class="date">2022.01.24</p>
+                    </div>
+                    <div class="text">
+                        <a href="#">우리 애기가 왜이럴까요</a>
+                        <p class="date">2022.01.23</p>
                     </div>
                 </div>
             </div>
