--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="shortcut icon" href="./images/favicon.png"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
     <meta name="description" content="동물과 함께하는 행복한 내일, 한마음동물보호센터">  
     <meta name="keywords" content="반려견, 반려묘, 강아지, 고양이, 분양, 반려동물, 반려동물보호센터, 강아지보호센터, 유기견, 유기묘 ">
@@ -76,12 +77,11 @@
 
     <main>
         <section id="contents">
-            <div class="news">
-                <h3>What's New</h3>
+            <div class="news" data-aos="zoom-in" data-aos-duration="1500">
                 <div class="btn">
-                    <button class="notice on">공지사항</button>
+                    <button class="notice on">새소식</button>
                     <button class="community">커뮤니티</button>
-                    <a href="#"><img src="./images/plus_icon.svg" alt="더보기"></a>
+                    <a href="#">더보기+</a>
                 </div>
                 <div class="text-box notice on">
                     <div class="text">
@@ -93,16 +93,17 @@
                         <p class="date">2022.02.06</p>
                     </div>
                     <div class="text">
-                        <a href="#">시설 리모델링 안내</a>
+                        <a href="#">시설 리모델링 연장 안내</a>
                         <p class="date">2022.01.22</p>
                     </div>
                     <div class="text">
                         <a href="#">2021년 후원금 사용내역 보고</a>
                         <p class="date">2022.01.08</p>
                     </div>
+
                     <div class="text">
-                        <a href="#">새해 휴무 안내</a>
-                        <p class="date">2022.12.28</p>
+                        <a href="#">시설 리모델링 안내</a>
+                        <p class="date">2022.01.07</p>
                     </div>
                 </div>
                 <div class="text-box community">
@@ -123,89 +124,257 @@
                         <p class="date">2022.01.24</p>
                     </div>
                     <div class="text">
-                        <a href="#">우리 애기가 왜이럴까요</a>
-                        <p class="date">2022.01.23</p>
+                        <a href="#">입양 후 사후관리에 대해 질문 있어요!</a>
+                        <p class="date">2022.01.24</p>
                     </div>
                 </div>
             </div>
 
-            <div class="volunteer">
+            <div class="volunteer" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="300"
+            >
                 <a href="#"><img src="./images/volunteer_banner.jpg" alt="자원봉사"></a>
+            </div>
+
+            <div class="map" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="600"
+            >
+                <h3>오시는 길</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1581.683163794423!2d126.97819052628888!3d37.54643218856999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca24320cf5177%3A0x6b76a50d2a8801b2!2z7ISc7Jq47Yq567OE7IucIOyaqeyCsOq1rCDtm4TslZTroZwgMTI!5e0!3m2!1sko!2skr!4v1650539514748!5m2!1sko!2skr" width="387" height="191" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
-        <section id="gallery">
+        <section id="about">
             <div class="container">
-                <h3>갤러리</h3>
-                <a href="#">더보기<img src="./images/more_btn.svg" alt="더보기"></a>
-                <div class="slide-btn">
-                    <img src="./images/arrow-left.svg" alt="이전" class="prev">
-                    <img src="./images/arrow-right.svg" alt="이후" class="next">
+                <img src="./images/about_bg.png" alt="">
+                <div class="title_box" data-aos="fade-right"
+                data-aos-duration="1000"data-aos-easing="ease-in-sine" data-aos-offset="200">
+                    <h3>한마음동물보호센터</h3>
+                    <p>동물과 공존하는 행복한 세상!
+                        <br>여러분의 관심과 사랑이 함께하면 현실이 됩니다.
+                    </p>
                 </div>
-                <div class="slide">
-                    <div class="slide-container">
-                        <div class="images">
-                            <img src="./images/gallery01.jpg" alt="">
-                            <img src="./images/gallery02.jpg" alt="">
-                            <img src="./images/gallery03.jpg" alt="">
-                            <img src="./images/gallery04.jpg" alt="">
-                            <img src="./images/gallery05.jpg" alt="">
-                            <img src="./images/gallery06.jpg" alt="">
-                            <img src="./images/gallery07.jpg" alt="">
-                            <img src="./images/gallery08.jpg" alt="">
-                            <img src="./images/gallery09.jpg" alt="">
-                            <img src="./images/gallery10.jpg" alt="">
-                            <img src="./images/gallery11.jpg" alt="">
-                            <img src="./images/gallery12.jpg" alt="">
-                        </div>
+                <div class="contents-box">
+                    <div class="facility"  data-aos="fade-down" data-aos-duration="1500" data-aos-delay="600" data-aos-offset="200">
+                        <img src="./images/about01.jpg" alt="">
+                        <h3>깨끗한 시설</h3>
+                        <p>새로 리모델링하여 최신식 시설과
+                            <br>설비를 갖추고 있습니다.</p>
+                    </div>
+                    <div class="expert" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="900" data-aos-offset="200">
+                        <p>전문 훈련사, 미용사, 수의사를 통한
+                            <br>전문적인 케어 시스템을 제공합니다.</p>
+                        <h3>전문 인력</h3>
+                        <img src="./images/about02.jpg" alt="">
+                    </div>
+                    <div class="adoption" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="1200" data-aos-offset="200">
+                        <img src="./images/about03.jpg" alt="">
+                        <h3>입양 후 사후관리</h3>
+                        <p>철저한 사후관리를 통해
+                            <br>아이들의 안전과 행복을 보장합니다.</p>
                     </div>
                 </div>
-                <div class="pagination">
+            </div>
+        </section>
+
+        <section id="center">
+            <div class="title_box" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">
+                <img src="./images/center_bg.png" alt="">
+                <h3>센터 아이들</h3>
+                <p>센터 아이들의
+                    <br>새로운 가족이 되어주세요</p>
+                <button>+더보기</button>
+            </div>
+            <div class="slide">
+                <div class="slide-container">
+                    <div class="images">
+                        <div class="center01" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
+                            <div class="hover-box">
+                                <h3>쪼롱이</h3>
+                                <p>5개월 미만, 암컷(미중성)</p>
+                                <p>매우 활발하고 건강해 보입니다.
+                                    <br>사람도 강아지도 많이 좋아하며
+                                    <br>요즘 이가 간지러운지 많은...
+                                </p>
+                            </div>
+                            <img src="./images/center01.jpg" alt="">
+                        </div>
+                        <div class="center02" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
+                            <div class="hover-box">
+                                <h3>장군이</h3>
+                                <p>2살, 수컷(중성)</p>
+                                <p>사람을 좋아하고 애교가 많습니다. 
+                                    <br>산책을 매우 좋아하며 활발하고
+                                    <br>친화적입니다. 특히 다른 ......
+                                </p>
+                            </div>
+                            <img src="./images/center02.jpg" alt="">
+                        </div>
+                        <div class="center03" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
+                            <div class="hover-box">
+                                <h3>소원이</h3>
+                                <p>4살, 암컷(중성)</p>
+                                <p>사람을 좋아하며 잘 따릅니다.
+                                    <br>얌전한 편이며 낮잠자는 것을
+                                    <br>좋아합니다. 털이 많이 빠지...
+                                </p>
+                            </div>
+                            <img src="./images/center03.jpg" alt="">
+                        </div>
+                        <div class="center04">
+                            <div class="hover-box">
+                                <h3>진만이</h3>
+                                <p>3살 추정, 수컷(미중성)</p>
+                                <p>온순하고 조용하지만
+                                    <br>다른 고양이들과 친화적입니다.
+                                    <br>약간의 분리불안 증세를 보이고 ...
+                                </p>
+                            </div>
+                            <img src="./images/center04.jpg" alt="">
+                        </div>
+                        <div class="center05">
+                            <div class="hover-box">
+                                <h3>하늘이</h3>
+                                <p>3살, 암컷(중성)</p>
+                                <p>매우 활발하고 활동량이 많습니다.
+                                    <br>호기심이 많아 사고를 많이
+                                    <br>치지만 매우 사랑스럽습니다...
+                                </p>
+                            </div>
+                            <img src="./images/center05.jpg" alt="">
+                        </div>
+                        <div class="center06">
+                            <div class="hover-box">
+                                <h3>영식이</h3>
+                                <p>2살 추정, 수컷(미중성)</p>
+                                <p>얌전하고 사람을 좋아하지만
+                                    <br>다른 강아지들은 무서워합니다.
+                                    <br>잘 짖지 않으며 누워있는 걸...
+                                </p>
+                            </div>
+                            <img src="./images/center06.jpg" alt="">
+                        </div>
+                        <div class="center07">
+                            <div class="hover-box">
+                                <h3>노랑이</h3>
+                                <p>1살 추정, 수컷(미중성)</p>
+                                <p>사람을 잘 따르는 개냥이입니다.
+                                    <br>호기심이 많고 사람 손이 닿는 것을
+                                    <br>좋아합니다. 쓰다듬어주면 ...
+                                </p>
+                            </div>
+                            <img src="./images/center07.jpg" alt="">
+                        </div>
+                        <div class="center08">
+                            <div class="hover-box">
+                                <h3>열정이</h3>
+                                <p>4살, 암컷(미중성)</p>
+                                <p>주변 반응에 무심하고 혼자 있는 걸
+                                    <br>좋아합니다. 사나운 편이라
+                                    <br>사람 손이 닿으면 물려고...
+                                </p>
+                            </div>
+                            <img src="./images/center08.jpg" alt="">
+                        </div>
+                        <div class="center09">
+                            <div class="hover-box">
+                                <h3>쪼꼬</h3>
+                                <p>6살, 수컷(중성)</p>
+                                <p>외로움을 많이 타는 아이입니다.
+                                    <br>사람은 물론 다른 강아지들도
+                                    <br>좋아하며 특히 공놀이를 좋아...
+                                </p>
+                            </div>
+                            <img src="./images/center09.jpg" alt="">
+                        </div>
+
+                    </div>
+                </div>
+                <div class="slide-btn">
+                    <img src="./images/arrow-left.svg" alt="이전" class="prev">
                     <div class="on"></div>
                     <div></div>
                     <div></div>
+                    <img src="./images/arrow-right.svg" alt="이후" class="next">
                 </div>
             </div>
         </section>
 
         <section id="adoption">
-            <h3>입양후기</h3>
-            <a href="#">더보기<img src="./images/more_btn.svg" alt="더보기"></a>
-            <div class="info-container">
-                <a href="#" class="info-box" data-aos="fade-up" data-aos-duration="1000">
-                    <img src="./images/adoption01.jpg" alt="입양후기">
-                    <div class="text-box">
-                        <img src="./images/profile01.png" alt="프로필">
-                        <h4>냠냠이 입양후기</h4>
-                        <p class="date">2022.03.11</p>
-                        <p>저희 집의 새식구가 된 냠냠이! 벌써 표정이 밝아진게 보이시나요?? 저희 집 꽁이와 사이좋게 잘 지내는 것 같아서 너무 다행입니다. 집앞에서 뛰어..
-                        </p>
+            <div class="container">
+                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
+                    <div onclick="location.href='#'">
+                        <img src="./images/adoption01.jpg" alt="">
+                        <div class="text-box">
+                            <img src="./images/profile01.png" alt="">
+                            <h4>냠냠이 입양후기</h4>
+                            <p class="date">2022.03.11</p>
+                            <p>저희 집의 새식구가 된 냠냠이! 벌써 표정이 밝아진게 보이시나요?? 저희 집 꽁이와 사이좋게 잘 지내는 것 같아서 너무 다행입니다. 집앞에서 뛰어노는 사진을 찍어봤습...
+                            </p>
+                        </div>
                     </div>
-                </a>
-                <a href="#" class="info-box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-                    <img src="./images/adoption02.jpg" alt="입양후기" >
-                    <div class="text-box">
-                        <img src="./images/profile02.png" alt="프로필">
-                        <h4>순이는 잘 지냅니다</h4>
-                        <p class="date">2022.03. 02</p>
-                        <p>자원봉사를 하러 왔다가 눈에 밟혀서 데려오게 된 순이는 잘 지내고 있습니다. 처음에는 적응을 못 해 힘들어 하는 모습을 보였는데 이제는 제 침대..
-                        </p>
+                </div>
+                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
+                    <div onclick="location.href='#'">
+                        <img src="./images/adoption02.jpg" alt="">
+                        <div class="text-box">
+                            <img src="./images/profile02.png" alt="">
+                            <h4>순이는 잘 지냅니다</h4>
+                            <p class="date">2022.03.11</p>
+                            <p>자원봉사를 하러 왔다가 눈에 밟혀서 데려오게 된 순이는 잘 지내고 있습니다. 처음에는 적응을 못 해 힘들어 하는 모습을 보였는데 이제는 제 침대까지 차지하고 잘 자고...
+                            </p>
+                        </div>
                     </div>
-                </a>
-                <a href="#" class="info-box" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-                    <img src="./images/adoption03.jpg" alt="입양후기">
-                    <div class="text-box">
-                        <img src="./images/profile03.png" alt="프로필">
-                        <h4>영식이의 근황</h4>
-                        <p class="date">2022.02.26</p>
-                        <p>데려올 땐 애기였던 영식이가 어느새 이렇게 컸습니다! 밥도 잘 먹고 똥도 잘 싸고 소파도 잘 물어뜯고 벽지도 잘 긁으며 행복하게 지내고 있어요. .
-                        </p>
+                </div>
+                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
+                    <div onclick="location.href='#'">
+                        <img src="./images/adoption03.jpg" alt="" >
+                        <div class="text-box">
+                            <img src="./images/profile03.png" alt="">
+                            <h4>영식이의 근황</h4>
+                            <p class="date">2022.03.11</p>
+                            <p>데려올 땐 애기였던 영식이가 어느새 이렇게 컸습니다! 밥도 잘 먹고 똥도 잘 싸고 소파도 잘 물어뜯고 벽지도 잘 긁으며 행복하게 지내고 있어요. 덕분에 저는 매우 바..
+                            </p>
+                        </div>
                     </div>
-                </a>
+                </div>
+            </div>
+            <div class="title_box" data-aos="fade-left" data-aos-duration="1000" >
+                <img src="./images/adoption_bg.png" alt="">
+                <h3>센터 아이들</h3>
+                <p>센터 아이들의
+                    <br>새로운 가족이 되어주세요</p>
+                <button>+더보기</button>
             </div>
         </section>
 
         <section id="donation">
+            <div class="container">
+                <h3>후원금은 어떻게 쓰이나요?</h3>
+                <img src="./images/donation-line.png" alt="" data-aos="fade-zoom-in"
+                data-aos-duration="1000" data-aos-offset="200">
+                <div class="text-box marketing" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="400" data-aos-offset="200">
+                    <p>동물보호 캠페인 및 홍보</p>
+                    <img src="./images/donation01.svg" alt="">
+                </div>
+                <div class="text-box education" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="800" data-aos-offset="200">
+                    <img src="./images/donation02.svg" alt="">
+                    <p>동물보호를 위한 교육사업</p>
+                </div>
+                <div class="text-box adoption" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="1200" data-aos-offset="200">
+                    <p>입양지원</p>
+                    <img src="./images/donation03.svg" alt="">
+                </div>
+                <div class="text-box support" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1600" data-aos-offset="200">
+                    <img src="./images/donation04.svg" alt="">
+                    <p>개인보호소 지원</p>
+                </div>
+            </div>
+            <div class="arrow">
+                <p>후원하기</p>
+                <img src="./images/donation-arrow.svg" alt="">
+            </div>
+        </section>
+
+        <section id="donation-banner">
             <div class="title">
                 <h4>후원계좌</h4>
                 <p>국민은행 122-345-678910</p>
