--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
             </div>
             <div class="title_box" data-aos="fade-left" data-aos-duration="1000" >
                 <img src="./images/adoption_bg.png" alt="">
-                <h3>센터 아이들</h3>
-                <p>센터 아이들의
-                    <br>새로운 가족이 되어주세요</p>
+                <h3>입양후기</h3>
+                <p>새로운 보금자리를 찾은 아이들의
+                    <br>미소를 자랑해주세요</p>
                 <button>+더보기</button>
             </div>
         </section>
