--- a/index.html
+++ b/index.html
@@ -176,173 +176,177 @@
         </section>
 
         <section id="center">
-            <div class="title_box" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">
-                <img src="./images/center_bg.png" alt="">
-                <h3>센터 아이들</h3>
-                <p>센터 아이들의
-                    <br>새로운 가족이 되어주세요</p>
-                <button>+더보기</button>
-            </div>
-            <div class="slide">
-                <div class="slide-container">
-                    <div class="images">
-                        <div class="center01" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
-                            <div class="hover-box">
-                                <h3>쪼롱이</h3>
-                                <p>5개월 미만, 암컷(미중성)</p>
-                                <p>매우 활발하고 건강해 보입니다.
-                                    <br>사람도 강아지도 많이 좋아하며
-                                    <br>요즘 이가 간지러운지 많은...
-                                </p>
-                            </div>
-                            <img src="./images/center01.jpg" alt="">
-                        </div>
-                        <div class="center02" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
-                            <div class="hover-box">
-                                <h3>장군이</h3>
-                                <p>2살, 수컷(중성)</p>
-                                <p>사람을 좋아하고 애교가 많습니다. 
-                                    <br>산책을 매우 좋아하며 활발하고
-                                    <br>친화적입니다. 특히 다른 ......
-                                </p>
-                            </div>
-                            <img src="./images/center02.jpg" alt="">
-                        </div>
-                        <div class="center03" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
-                            <div class="hover-box">
-                                <h3>소원이</h3>
-                                <p>4살, 암컷(중성)</p>
-                                <p>사람을 좋아하며 잘 따릅니다.
-                                    <br>얌전한 편이며 낮잠자는 것을
-                                    <br>좋아합니다. 털이 많이 빠지...
-                                </p>
-                            </div>
-                            <img src="./images/center03.jpg" alt="">
-                        </div>
-                        <div class="center04">
-                            <div class="hover-box">
-                                <h3>진만이</h3>
-                                <p>3살 추정, 수컷(미중성)</p>
-                                <p>온순하고 조용하지만
-                                    <br>다른 고양이들과 친화적입니다.
-                                    <br>약간의 분리불안 증세를 보이고 ...
-                                </p>
-                            </div>
-                            <img src="./images/center04.jpg" alt="">
-                        </div>
-                        <div class="center05">
-                            <div class="hover-box">
-                                <h3>하늘이</h3>
-                                <p>3살, 암컷(중성)</p>
-                                <p>매우 활발하고 활동량이 많습니다.
-                                    <br>호기심이 많아 사고를 많이
-                                    <br>치지만 매우 사랑스럽습니다...
-                                </p>
-                            </div>
-                            <img src="./images/center05.jpg" alt="">
-                        </div>
-                        <div class="center06">
-                            <div class="hover-box">
-                                <h3>영식이</h3>
-                                <p>2살 추정, 수컷(미중성)</p>
-                                <p>얌전하고 사람을 좋아하지만
-                                    <br>다른 강아지들은 무서워합니다.
-                                    <br>잘 짖지 않으며 누워있는 걸...
-                                </p>
-                            </div>
-                            <img src="./images/center06.jpg" alt="">
-                        </div>
-                        <div class="center07">
-                            <div class="hover-box">
-                                <h3>노랑이</h3>
-                                <p>1살 추정, 수컷(미중성)</p>
-                                <p>사람을 잘 따르는 개냥이입니다.
-                                    <br>호기심이 많고 사람 손이 닿는 것을
-                                    <br>좋아합니다. 쓰다듬어주면 ...
-                                </p>
-                            </div>
-                            <img src="./images/center07.jpg" alt="">
-                        </div>
-                        <div class="center08">
-                            <div class="hover-box">
-                                <h3>열정이</h3>
-                                <p>4살, 암컷(미중성)</p>
-                                <p>주변 반응에 무심하고 혼자 있는 걸
-                                    <br>좋아합니다. 사나운 편이라
-                                    <br>사람 손이 닿으면 물려고...
-                                </p>
-                            </div>
-                            <img src="./images/center08.jpg" alt="">
-                        </div>
-                        <div class="center09">
-                            <div class="hover-box">
-                                <h3>쪼꼬</h3>
-                                <p>6살, 수컷(중성)</p>
-                                <p>외로움을 많이 타는 아이입니다.
-                                    <br>사람은 물론 다른 강아지들도
-                                    <br>좋아하며 특히 공놀이를 좋아...
-                                </p>
-                            </div>
-                            <img src="./images/center09.jpg" alt="">
-                        </div>
-
-                    </div>
+            <div class="container">
+                <div class="title_box" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">
+                    <img src="./images/center_bg.png" alt="">
+                    <h3>센터 아이들</h3>
+                    <p>센터 아이들의
+                        <br>새로운 가족이 되어주세요</p>
+                    <button>+더보기</button>
                 </div>
-                <div class="slide-btn">
-                    <img src="./images/arrow-left.svg" alt="이전" class="prev">
-                    <div class="on"></div>
-                    <div></div>
-                    <div></div>
-                    <img src="./images/arrow-right.svg" alt="이후" class="next">
+                <div class="slide">
+                    <div class="slide-container">
+                        <div class="images">
+                            <div class="center01" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
+                                <div class="hover-box">
+                                    <h3>쪼롱이</h3>
+                                    <p>5개월 미만, 암컷(미중성)</p>
+                                    <p>매우 활발하고 건강해 보입니다.
+                                        <br>사람도 강아지도 많이 좋아하며
+                                        <br>요즘 이가 간지러운지 많은...
+                                    </p>
+                                </div>
+                                <img src="./images/center01.jpg" alt="">
+                            </div>
+                            <div class="center02" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
+                                <div class="hover-box">
+                                    <h3>장군이</h3>
+                                    <p>2살, 수컷(중성)</p>
+                                    <p>사람을 좋아하고 애교가 많습니다. 
+                                        <br>산책을 매우 좋아하며 활발하고
+                                        <br>친화적입니다. 특히 다른 ......
+                                    </p>
+                                </div>
+                                <img src="./images/center02.jpg" alt="">
+                            </div>
+                            <div class="center03" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
+                                <div class="hover-box">
+                                    <h3>소원이</h3>
+                                    <p>4살, 암컷(중성)</p>
+                                    <p>사람을 좋아하며 잘 따릅니다.
+                                        <br>얌전한 편이며 낮잠자는 것을
+                                        <br>좋아합니다. 털이 많이 빠지...
+                                    </p>
+                                </div>
+                                <img src="./images/center03.jpg" alt="">
+                            </div>
+                            <div class="center04">
+                                <div class="hover-box">
+                                    <h3>진만이</h3>
+                                    <p>3살 추정, 수컷(미중성)</p>
+                                    <p>온순하고 조용하지만
+                                        <br>다른 고양이들과 친화적입니다.
+                                        <br>약간의 분리불안 증세를 보이고 ...
+                                    </p>
+                                </div>
+                                <img src="./images/center04.jpg" alt="">
+                            </div>
+                            <div class="center05">
+                                <div class="hover-box">
+                                    <h3>하늘이</h3>
+                                    <p>3살, 암컷(중성)</p>
+                                    <p>매우 활발하고 활동량이 많습니다.
+                                        <br>호기심이 많아 사고를 많이
+                                        <br>치지만 매우 사랑스럽습니다...
+                                    </p>
+                                </div>
+                                <img src="./images/center05.jpg" alt="">
+                            </div>
+                            <div class="center06">
+                                <div class="hover-box">
+                                    <h3>영식이</h3>
+                                    <p>2살 추정, 수컷(미중성)</p>
+                                    <p>얌전하고 사람을 좋아하지만
+                                        <br>다른 강아지들은 무서워합니다.
+                                        <br>잘 짖지 않으며 누워있는 걸...
+                                    </p>
+                                </div>
+                                <img src="./images/center06.jpg" alt="">
+                            </div>
+                            <div class="center07">
+                                <div class="hover-box">
+                                    <h3>노랑이</h3>
+                                    <p>1살 추정, 수컷(미중성)</p>
+                                    <p>사람을 잘 따르는 개냥이입니다.
+                                        <br>호기심이 많고 사람 손이 닿는 것을
+                                        <br>좋아합니다. 쓰다듬어주면 ...
+                                    </p>
+                                </div>
+                                <img src="./images/center07.jpg" alt="">
+                            </div>
+                            <div class="center08">
+                                <div class="hover-box">
+                                    <h3>열정이</h3>
+                                    <p>4살, 암컷(미중성)</p>
+                                    <p>주변 반응에 무심하고 혼자 있는 걸
+                                        <br>좋아합니다. 사나운 편이라
+                                        <br>사람 손이 닿으면 물려고...
+                                    </p>
+                                </div>
+                                <img src="./images/center08.jpg" alt="">
+                            </div>
+                            <div class="center09">
+                                <div class="hover-box">
+                                    <h3>쪼꼬</h3>
+                                    <p>6살, 수컷(중성)</p>
+                                    <p>외로움을 많이 타는 아이입니다.
+                                        <br>사람은 물론 다른 강아지들도
+                                        <br>좋아하며 특히 공놀이를 좋아...
+                                    </p>
+                                </div>
+                                <img src="./images/center09.jpg" alt="">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="slide-btn">
+                        <img src="./images/arrow-left.svg" alt="이전" class="prev">
+                        <div class="on"></div>
+                        <div></div>
+                        <div></div>
+                        <img src="./images/arrow-right.svg" alt="이후" class="next">
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="adoption">
-            <div class="container">
-                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
-                    <div onclick="location.href='#'">
-                        <img src="./images/adoption01.jpg" alt="">
-                        <div class="text-box">
-                            <img src="./images/profile01.png" alt="">
-                            <h4>냠냠이 입양후기</h4>
-                            <p class="date">2022.03.11</p>
-                            <p>저희 집의 새식구가 된 냠냠이! 벌써 표정이 밝아진게 보이시나요?? 저희 집 꽁이와 사이좋게 잘 지내는 것 같아서 너무 다행입니다. 집앞에서 뛰어노는 사진을 찍어봤습...
-                            </p>
+            <div class="adoption-container">
+                <div class="container">
+                    <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="900" data-aos-offset="200">
+                        <div onclick="location.href='#'">
+                            <img src="./images/adoption01.jpg" alt="">
+                            <div class="text-box">
+                                <img src="./images/profile01.png" alt="">
+                                <h4>냠냠이 입양후기</h4>
+                                <p class="date">2022.03.11</p>
+                                <p>저희 집의 새식구가 된 냠냠이! 벌써 표정이 밝아진게 보이시나요?? 저희 집 꽁이와 사이좋게 잘 지내는 것 같아서 너무 다행입니다. 집앞에서 뛰어노는 사진을 찍어봤습...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
+                        <div onclick="location.href='#'">
+                            <img src="./images/adoption02.jpg" alt="">
+                            <div class="text-box">
+                                <img src="./images/profile02.png" alt="">
+                                <h4>순이는 잘 지냅니다</h4>
+                                <p class="date">2022.03.11</p>
+                                <p>자원봉사를 하러 왔다가 눈에 밟혀서 데려오게 된 순이는 잘 지내고 있습니다. 처음에는 적응을 못 해 힘들어 하는 모습을 보였는데 이제는 제 침대까지 차지하고 잘 자고...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
+                        <div onclick="location.href='#'">
+                            <img src="./images/adoption03.jpg" alt="" >
+                            <div class="text-box">
+                                <img src="./images/profile03.png" alt="">
+                                <h4>영식이의 근황</h4>
+                                <p class="date">2022.03.11</p>
+                                <p>데려올 땐 애기였던 영식이가 어느새 이렇게 컸습니다! 밥도 잘 먹고 똥도 잘 싸고 소파도 잘 물어뜯고 벽지도 잘 긁으며 행복하게 지내고 있어요. 덕분에 저는 매우 바..
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="600" data-aos-offset="200">
-                    <div onclick="location.href='#'">
-                        <img src="./images/adoption02.jpg" alt="">
-                        <div class="text-box">
-                            <img src="./images/profile02.png" alt="">
-                            <h4>순이는 잘 지냅니다</h4>
-                            <p class="date">2022.03.11</p>
-                            <p>자원봉사를 하러 왔다가 눈에 밟혀서 데려오게 된 순이는 잘 지내고 있습니다. 처음에는 적응을 못 해 힘들어 하는 모습을 보였는데 이제는 제 침대까지 차지하고 잘 자고...
-                            </p>
-                        </div>
-                    </div>
+                <div class="title_box" data-aos="fade-left" data-aos-duration="1000" >
+                    <img src="./images/adoption_bg.png" alt="">
+                    <h3>입양후기</h3>
+                    <p>새로운 보금자리를 찾은 아이들의
+                        <br>미소를 자랑해주세요</p>
+                    <button>+더보기</button>
                 </div>
-                <div class="info-box" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300" data-aos-offset="200">
-                    <div onclick="location.href='#'">
-                        <img src="./images/adoption03.jpg" alt="" >
-                        <div class="text-box">
-                            <img src="./images/profile03.png" alt="">
-                            <h4>영식이의 근황</h4>
-                            <p class="date">2022.03.11</p>
-                            <p>데려올 땐 애기였던 영식이가 어느새 이렇게 컸습니다! 밥도 잘 먹고 똥도 잘 싸고 소파도 잘 물어뜯고 벽지도 잘 긁으며 행복하게 지내고 있어요. 덕분에 저는 매우 바..
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="title_box" data-aos="fade-left" data-aos-duration="1000" >
-                <img src="./images/adoption_bg.png" alt="">
-                <h3>입양후기</h3>
-                <p>새로운 보금자리를 찾은 아이들의
-                    <br>미소를 자랑해주세요</p>
-                <button>+더보기</button>
             </div>
         </section>
 
